--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ YAMAHAS
 <head>
 <h1>
 <center>
-i do some websites not that complecated for cheap i take robux/paypal
+i do some websites not that complicated for cheap i take robux/paypal
 </head>
 </h1>
 </center>
